versioned_docs/version-1.24/release-notes.mdx
---
title: Release notes
description: Release Notes
sidebar_label: Release notes
id: release-notes
---

## 1.24.2

9 September 2024

This version is compatible with Kubernetes versions 1.27 to 1.30

### Bug Fixes

- Fix high vulnerabilities in backend and pipeline installer images

## 1.24.1

9 September 2024

This version is compatible with Kubernetes versions 1.27 to 1.30

### Bug Fixes

- Fix deploy of development environments from the UI when the git URL is from a self-hosted GitLab instance and it refers to repositories within Groups and Subgroups

## 1.24.0

9 September 2024

This version is compatible with Kubernetes versions 1.27 to 1.30

### New Features

- Announcing the pre-release of CLI 3.0! [Please read our blog post for more details and information on breaking changes](https://okteto.com/blog/cli-three-release)
- Enable [multi-user token authentication](self-hosted/install/auth/token.mdx)  <!-- 8481 -->
- Added support for [BuildKit Bridge Mode](self-hosted/helm-configuration.mdx#buildkit) to avoid port collisions on parallel builds

### Improvements

- Added new [Developer Quickstart Guide to the documentation](get-started/dev-quickstart.mdx) <!-- to add link on version upgrade -->
- Upgraded [ingress-nginx to v1.11.2](https://github.com/kubernetes/ingress-nginx/releases/tag/controller-v1.11.2) adding support for [gRPC timeout settings via annotations](https://github.com/kubernetes/ingress-nginx/pull/11258). This update may introduce a breaking change related to an [uncommon edge case](https://github.com/kubernetes/ingress-nginx/issues/11866)  <!-- 8460 -->
- Updated the "Want to know more" links in an empty namespace  <!-- 8415 -->
- Added [tolerations for EventsExporter StatefulSet](self-hosted/helm-configuration.mdx#insights)  <!-- 8446 -->
- Updated pipeline-runner image to v1.0.5 to update cue to 0.9.2  <!-- 8482 -->
- [Okteto CLI 2.31.0 Upgrade Notice](https://github.com/okteto/okteto/releases/tag/2.31.0): To upgrade to new ECDSA keys, all active development containers will be recreated on the first okteto up after upgrading to 2.31.0
- [Okteto CLI 2.31.0](https://github.com/okteto/okteto/releases/tag/2.31.0): Replaced RSA with ECDSA for SSH keys. This allows the use of debuggers on Visual Studio with Development Containers
- [Okteto CLI 2.31.0](https://github.com/okteto/okteto/releases/tag/2.31.0): Prevent Syncthing from restarting and activating [relay](https://docs.syncthing.net/users/relaying.html) if the Synching configuration is lost

### Bug Fixes

- Trimmed .git suffix when extracting repository data  <!-- 8423 -->
- Fixed Development Environment UI collapse when a nested item is deleted  <!-- 8340 -->
- Added OKTETO_TOKEN as a [reserved variable name](core/credentials/environment-variables.mdx) in the UI  <!-- 8427 -->
- Fixed git url parsing for URLs with a trailing slash  <!-- 8447 -->
- Fixed an overflow issue with long variable values  <!-- 8455 -->
- Private endpoint cookies now delete upon logout  <!-- 8451 -->
- Fixed duplicated endpoints in the UI if they're shared by more than one resource  <!-- 8459 -->
- Fixed GitHub integration configuration issue in Settings view  <!-- 8462 -->

### Removal Notice

- Support for Kubernetes [1.26](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.26.md) has been removed in this release.

## 1.23.3

9 September 2024

This version is compatible with Kubernetes versions 1.26 to 1.30

### Bug Fixes

- Fix deploy of development environments from the UI when the git URL is from a self-hosted GitLab instance and it refers to repositories within Groups and Subgroups

## 1.23.2

16 August 2024

This version is compatible with Kubernetes versions 1.26 to 1.30

### Bug Fixes

- Fix deploys for repositories with a trailing slash

## 1.23.1

14 August 2024

This version is compatible with Kubernetes versions 1.26 to 1.30

### Bug Fixes

- Updated the backend CLI to 2.30.1 to fix an error when deploying remotely an Okteto Manifest storing a variable with the symbol `=` on [$OKTETO_ENV](core/okteto-variables.mdx#okteto_env)

## 1.23.0

12 August 2024

This version is compatible with Kubernetes versions 1.26 to 1.30

### Deprecation Notice
- Support for Kubernetes 1.26 has been deprecated and will be removed in the next release.

### New Features

- Added a [feature flag to enable/disable autowake](self-hosted/helm-configuration.mdx#autowake) for Namespaces and Preview Environments on incoming request  <!-- 8379 -->
- Added support for Kubernetes 1.30  <!-- 8421 -->

### Improvements

- Added support for displaying the correct Dev Environment name when using Groups and Subgroups in GitLab
- Fixed how Gitlab Groups and Subgroups are displayed in the Previews view
- Prevent the usage of [reserved variable names](core/okteto-variables.mdx#reserved-variables)  <!-- 8272 -->
- Updated registry version to return 404 errors for malformed image requests, allowing new builds of the image to be pushed. This resolves issues where improperly stored images prevented successful new builds  <!-- 8368 -->
- Added a dashboard indicator to show whether the Garbage Collector is enabled  <!-- 8380 -->
- Bumped daemon to 0.13.0 and cli to 2.30.0  <!-- 8411 -->
- [Okteto CLI 2.30.0](https://github.com/okteto/okteto/releases/tag/2.30.0): You can now Build images using the `okteto build` command as part of your Okteto commands in the Okteto Manifest when executing a remote deploy/destroy. Previous to this, no image was being built
- [Okteto CLI 2.30.0](https://github.com/okteto/okteto/releases/tag/2.30.0): You can now [specify hosts](reference/okteto-manifest.mdx#hosts-string-optional) to resolve to specific IPs for your tests defined under the `test` section of the Okteto Manifest

### Bug Fixes

- Fix to gracefully handle localStorage errors  <!-- 8310 -->
- Fixed layout shifting upon loading staged logs  <!-- 8406 -->
- Fix "variables ignored" warning shown on deploy-URL for "Develop On Okteto Button" feature despite not having specified any variables  <!-- 8414 -->
- Okteto CLI 2.30.0: Fixed a bug that was preventing `okteto test` from exporting artifacts when a folder was specified under the `artifacts` key


## 1.22.1

19 July 2024

This version is compatible with Kubernetes versions 1.26 to 1.29

### Improvements

- Updated the backend CLI to 2.29.2 to address potential vulnerabilities
- Improved the backend and installer images to enhance overall security
- Bumped Buildkit image to v0.12.5-okteto3 to fix critical vulnerabilities

## 1.22.0

8 July 2024

This version is compatible with Kubernetes versions 1.26 to 1.29

### Breaking Changes

- Disabled private registries by default in nodes. [Pull secrets](admin/registry-credentials/index.mdx#how-it-works), enabled by default since `1.20`, are used for deploying pods with private images  <!-- 8215 -->
- Removed the automatic binding between `cluster-admin` cluster role, and every service account created within a namespace managed by Okteto. You can find more information in our [Upgrade Guide here](self-hosted/manage/upgrade.mdx#upgrading-to-okteto-122x).  <!-- 8245 -->

### New Features


- Support of AWS IAM Roles to configure Private Registries. Please see [the specific documentation page](admin/registry-credentials/amazon-ecr.mdx) to understand their configuration   <!-- 8104 -->
- Add OIDC endpoint to the cluster overview panel in the Admin Dashboard  <!-- 8151 -->
- Okteto CLI: Make Preview Environments global by default and allow non-admin users to create them  <!-- 8217 -->

### Improvements

- Admin users are now able to perform any operation on any user's namespace via UI, CLI or at the Kubernetes level
- Added configuration for developer permissions in global preview environments via role binding to the cluster role set by [`serviceAccounts.roleBindings.previews`](self-hosted/helm-configuration.mdx#serviceaccounts) Helm setting
- Developers now have read access to global preview environments at the Kubernetes level (after getting Kubernetes context with `okteto kubeconfig`)
- Changed Admin Users' role selection label from "User" to "Developer" for consistency  <!-- 8202 -->
- Improved Okteto Insights data collection time  <!-- 8222 -->
- Reorganized 'user' helm setting to 'serviceAccounts' and include one setting to create a role binding for global previews. Please see our [upgrade guide](self-hosted/manage/upgrade.mdx#upgrading-to-okteto-122x) for details on how to adopt the changes  <!-- 8233 -->
- Specified the credentials to be removed in the delete credential confirmation dialog  <!-- 8250 -->
- Upgraded the Okteto CLI version to [2.29.0](https://github.com/okteto/okteto/releases/tag/2.29.0)
- Okteto CLI: Admins can now perform operations in any user's namespaces via the CLI context
- Okteto CLI: Test artifacts defined under the `test` section are exported even if tests execution fails
- Okteto CLI: Images defined in your Okteto manifest targeting dev registry (okteto.dev) and using a custom tag will now benefit from [Okteto Smart Builds](core/build-service.mdx#smart-builds)

### Bug Fixes

- Fixed a rare issue where the Okteto Dashboard would render nothing during loading  <!-- 8199 -->
- Fixed an issue in the webhook that was preventing a Virtual Service to keep the specified `exportTo` field  <!-- 8204 -->
- Fixed empty space in the Okteto Dashboard while data is being re-fetched  <!-- 8237 -->
- Use globals.nodeSelectors.dev to filter Insights node data  <!-- 8226 -->
- Extend support for globals.nodeSelector in the Autoscaler, node readiness and the nodes admin view  <!-- 8238 -->
- Fixed panic in private-endpoints handler when deployed standalone and accessed for the first time <!-- 8260 -->


## 1.21.2

19 July 2024

This version is compatible with Kubernetes versions 1.26 to 1.29

### Improvements

- Updated the backend CLI to 2.28.2 to address potential vulnerabilities
- Improved the backend and installer images to enhance overall security
- Bumped Buildkit image to v0.12.5-okteto3 to fix critical vulnerabilities

## 1.21.1

11 June 2024

This version is compatible with Kubernetes versions 1.26 to 1.29

### Deprecation Notice

- Announced [deprecation of Okteto Autoscaler](self-hosted/helm-configuration.mdx#autoscaler-deprecated). We recommend relying on cpu/memory requests to autoscale your cluster

### Bug Fixes

- When [Istio Virtual Services were enabled](self-hosted/helm-configuration.mdx#virtualservices), Okteto's webhook no longer removes the property `exportTo` defined in a virtual service object   <!-- 8204 -->
- Fix a view refresh every few minutes in the `General` tab of the Admin Dashboard  <!-- 8199 -->

## 1.21.0

7 June 2024

This version is compatible with Kubernetes versions 1.26 to 1.29

### Deprecation Notice

- Announced [deprecation of Okteto Autoscaler](self-hosted/helm-configuration.mdx#autoscaler-deprecated). We recommend relying on cpu/memory requests to autoscale your cluster

### New Features

- The platform will now only obfuscate variables that are longer than 5 characters  <!-- 8090 -->
- We've added the ability to [set custom NodeSelectors](self-hosted/helm-configuration.mdx#globals)  <!-- 8093 -->

### Improvements

- Show GitHub installations error notifications only when opening GitHub tab on Deploy dialog  <!-- 8106 -->
- Handle suspended GitHub installation error on the branch selector in the Okteto UI  <!-- 8123 -->
- Enable more error variant feedback on the GitHub BranchSelector in the Okteto UI  <!-- 8122 -->
- Handle suspended Github app installation on the repositories selector in the Okteto UI  <!-- 8128 -->
- Removed ingress name validation in the mutation webhook for ingress created as part of cert-manager challenges
- Handle HTTP 5xx errors more gracefully in the Okteto UI  <!-- 8149 -->
- Upgraded the Okteto CLI version to [2.28.0](https://github.com/okteto/okteto/releases/tag/2.28.0).
- Okteto CLI: Changed .oktetodeployignore files to use .oktetoignore for [remote executions of deploy and destroy](core/remote-execution.mdx#ignoring-files), which allows more granularity to ignore files. You can add global ignore, but also specific ignores per operation
- Okteto CLI: Fix to correctly discover the git repository when a manifest is within a subfolder of the repository. This was preventing [Smart Builds](core/build-service.mdx#smart-builds) from detecting when an image was previously built

### Bug Fixes

- Fix branch selector regression causing "bad-request" error  <!-- 8117 -->
- Ignore ingress, virtual services, and routes without hosts  <!-- 8132 -->
- Fix installer destroy operation when checking branch existence for private registries using SSH protocol  <!-- 8147 -->


## 1.20.1

28 May 2024

This version is compatible with Kubernetes versions 1.26 to 1.29

### Bug Fixes

- Updated the backend CLI to version 2.27.3 to resolve a panic issue that occurred when using Docker Compose with Okteto Manifests, specifically when the `image` field in a compose service referred to an environment variable  <!-- 4312, 8135 -->

## 1.20.0

21 May 2024

This version is compatible with Kubernetes versions 1.26 to 1.29

### Deprecation Notice

- Announced [deprecation of compose file detection](https://community.okteto.com/t/important-update-migrating-from-okteto-stacks-to-docker-compose/1262) by name

### New Features

- Enable [Pull Secrets by default](admin/registry-credentials/index.mdx). If you do not wish to manage pull secrets, please see our [upgrade guide](self-hosted/manage/upgrade.mdx#upgrading-to-okteto-120x) to disable.  <!-- 8001 -->
- Added onboarding guides to our documentation on [how to get started with Okteto Insights](admin/okteto-insights.mdx) <!-- 729 -->
- Added the ability to assign a [PriorityClass](self-hosted/helm-configuration.mdx#globals) to Okteto components  <!-- 7966 -->
- Added `globals` and `buildkit` tolerations to the Helm Chart and standardize their helm values  <!-- 8029 -->

### Improvements

- Namespaces without an owner will now be picked up by the Garbage Collector  <!-- 8018 -->
- Removed ingress TLS validation to allow more flexibility in deploying your own ingress objects  <!-- 8021 -->
- Renamed Variables to "Admin Variables" in the Admin section for clarity  <!-- 8040 -->
- Included license issue warning badges on Admin and sidebar menu items  <!-- 8074 -->
- Made error handling and feedback messages more consistent and actionable throughout the UI  <!-- 7952 -->
- In the UI, we renamed all `/cluster/*` routes to `/admin/*`  <!-- 8002 -->
- Updated CLI version in the backend to 2.27.2  <!-- 8089 -->
- Okteto CLI: Changed the heuristic to mask variables in logs and comments that are longer that 5 characters
- Okteto CLI: Added support for variables expansion on `manifest.build.dockerfile`
- Okteto CLI: Added support for variable expansion in variables defined in `.env` - for example `"VAR1=${VAR2:-default}"`

### Bug Fixes

- Fixed branch selector behavior in UI when Github fails to fetch branches  <!-- 8004 -->
- Fixed a GitHub integration issue where the dialog state wasn't updated after reconfiguring access through the popup for suspended installations  <!-- 8020 -->
- Fixed an issue where personal tokens set to never expire were changed to a 180-day expiration by the next migration job  <!-- 8016 -->
- Trial licenses are now recognized in the onboarding checklist  <!-- 8043 -->

### Removal Notice

- Support for Kubernetes [1.25](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.25.md) has been removed in this release.


## 1.19.4

28 May 2024

This version is compatible with Kubernetes versions 1.25 to 1.29

### Bug Fixes

- Updated the backend CLI to version 2.26.2 to resolve a panic issue that occurred when using Docker Compose with Okteto Manifests, specifically when the `image` field in a compose service referred to an environment variable  <!-- 4312, 8137 -->


## 1.19.3

15 May 2024

This version is compatible with Kubernetes versions 1.25 to 1.29

### Deprecation Notice

- Support for Kubernetes [1.25](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.25.md) has been deprecated and will be removed in the next release.

### Bug Fixes

- Fix pulling images from the okteto registry after sharing a namespace when pull secrets is enabled.

## 1.19.2

10 May 2024

This version is compatible with Kubernetes versions 1.25 to 1.29

### Deprecation Notice

- Support for Kubernetes [1.25](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.25.md) has been deprecated and will be removed in the next release.

### Bug Fixes

- Fix pulling images from ECR private registries in dev namespaces when pull secrets is enabled.

## 1.19.1

26 April 2024

This version is compatible with Kubernetes versions 1.25 to 1.29

### Deprecation Notice

- Support for Kubernetes [1.25](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.25.md) has been deprecated and will be removed in the next release.

### Improvements

- Okteto CLI: the scope of the breaking change introduced in 1.19.0 has been reduced. `okteto deploy` will ignore host volumes of Docker Compose services only if the service defines a `build` section. [Please see our community post for more details](https://community.okteto.com/t/important-update-changes-to-docker-compose-deployment-behavior-in-okteto/1246)

### Bug Fixes

- Resolved a bug with migrations occurring during every Okteto upgrade. Tokens that were set to never expire were inadvertently being modified to expire in 180 days. This fix ensures that token expiration times are not altered during Okteto upgrades

## 1.19.0

16 April 2024

This version is compatible with Kubernetes versions 1.25 to 1.29

### Deprecation Notice

- Support for Kubernetes [1.25](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.25.md) has been deprecated and will be removed in the next release.

### New Features

- [Okteto Insights](admin/okteto-insights.mdx): Pod v2, Build, Deploy, User, Namespace, and Preview metrics are now available <!-- 7897, 7906, 7898, 7900 -->
- [Smart Builds](core/build-service.mdx#smart-builds) now uses `build: context` instead of `project: commit` to detect if an image was already built
- Add Grafana to Admin UI to support Okteto Insights for SaaS plan users  <!-- 7861 -->

### Breaking Changes

- Okteto CLI: `okteto deploy` will ignore host volumes defined by Docker Compose services. [Please see our community post for more details](https://community.okteto.com/t/important-update-changes-to-docker-compose-deployment-behavior-in-okteto/1246)

### Improvements

- Update buildkit to [v0.12.5](https://github.com/moby/buildkit/releases/tag/v0.12.5)  <!-- 7830 -->
- [maxNamespaces quota](self-hosted/helm-configuration.mdx#quotas) doesn't apply to the `okteto-bot` user  <!-- 7905 -->
- Introduced the OKTETO_IS_PREVIEW_ENVIRONMENT variable to identify when a deployment is happening in a preview environment  <!-- 7904 -->
- Hide passwords when creating new private registry credentials  <!-- 7946 -->
- Add CLI environment variable to enable or disable local Docker credentials when building images. This setting defaults to `true` <!-- 4196 -->
- Support for the compose.yml and compose.yaml file extensions

### Bug Fixes

- Okteto CLI: Add CORS PNA to support browser logins from the Okteto CLI <!-- 4212 -->
- Fix endpoint links in the UI that span the full width of container and break layout  <!-- 7837 -->
- `OKTETO_COMPOSE_VOLUME_AFFINITY_ENABLED` feature flag variable to disable the "force node" behavior when pods share the same PVC  <!-- 7873 -->
- Allow `okteto-bot` to use GitHub integration when deploying repositories  <!-- 7892 -->
- Fix a wrong redirect when a preview doesn't exist  <!-- 7942 -->
- Make docker config static a pull secret  <!-- 7908 -->
- Translate compose annotations into Kubernetes labels. We had been translating compose labels into k8s annotations but not viceversa <!-- 4199, 4204 -->

## 1.18.2

20 March 2024

This version is compatible with Kubernetes versions 1.25 to 1.28.

### Bug Fixes

- Dev environments and preview environments deployed from private repositories using Admin Access Tokens were not able to clone the repository even when the GitHub App had access to it.

## 1.18.1

12 March 2024

This version is compatible with Kubernetes versions 1.25 to 1.28.

### Features

- Support a feature flag to disable the logic that forces pods with a shared volume to be scheduled on the same node (`unsupported.forceNodeToPodsWithSamePVCs: false`).

## 1.18.0

27 February 2024

This version is compatible with Kubernetes versions 1.25 to 1.28.

### Features

- Implementation of [Admin Access Tokens](admin/dashboard.mdx#admin-access-tokens)  <!-- 7636, 7630, 7651 -->

### Improvements

- Added [instructions for deploying Okteto with ArgoCD](self-hosted/manage/argocd.mdx)
- Change default value of [ingress.forceIngressSubdomain](self-hosted/helm-configuration.mdx#ingress) to false. By default, Okteto won't force deployed applications to match [Okteto's subdomain](get-started/deploy-your-app/endpoints.mdx)    <!-- 7718 -->
- Enable by default cluster policy for registry. Enables any of your Okteto users to have read access to any image built in other namespaces. [To limit this to the previous behavior](self-hosted/helm-configuration.mdx#registry), set `registry.pullPolicy` to `namespace`  <!-- 7829 -->
- The Okteto CLI used for Pipeline installation has been upgraded to [version 2.25.2](https://github.com/okteto/okteto/releases/tag/2.25.0)
- Upgrade BuildKit to `0.12.5` <!-- 7830 -->

### Bug Fixes

- Hide clear button if namespace search input is empty  <!-- 7667 -->
- In deploy dialog, fix wrong filter when canceling current repository on SelectRepository  <!--7668 -->
- Fix filtered namespace view where parent resources were not expanded  <!-- 7669 -->
- Fix closing create access token dialog from keyboard  <!-- 7671 -->
- Fix Scale to Zero Period showing wrong value in Previews UI  <!-- 7725 -->
- Fix wrong "Waking Up" status when switching to a "Sleeping" namespace  <!-- 7817 -->
- Properly render `code` nodes as inline elements inside a list item  <!-- 7821 -->
- Fix BuildKit configuration behind our ingress-controller not working when BuildKit had more than 1 replica  <!-- 7816 -->

## 1.17.0

23 January 2024

This version is compatible with Kubernetes versions 1.25 to 1.28.

### Features

- Enable search in namespace resources UI  <!-- 7577 -->
- Enable admins to [transfer namespace ownership](core/namespaces.mdx#transfer-namespace-ownership)  <!-- 7593 -->
- Add [Pod metrics to Okteto Insights](admin/okteto-insights.mdx#pod-metrics)  <!-- 7594 -->

### Improvements

- Hoist Personal Access Tokens menu from Setup to Settings  <!-- 7574 -->
- Rename Launch to Deploy in the Okteto UI  <!-- 7576 -->
- Rename Secrets to Variables under both Settings and Admin sections. This rename is for consistency in the UI and delivers no change in functionality   <!-- 7581 -->
- Support for multi-line secrets  <!-- 7580 -->
- Improve buildkit cache reloading on helm upgrades. Please note this upgrade will imply a restart in the build cache  <!-- 7615 -->

### Bug Fixes

- Surface buildkit errors through our ingress controller. Will result in better build error messages  <!-- 7526 -->
- The Okteto Insights endpoint was not exposing build metrics when the Helm release name included the word "okteto"  <!-- 7600 -->
- Fixed a scenario where the runtime of node containers could restart if the Okteto daemon pod were to be recreated, potentially impacting active 'okteto up' sessions <!-- 7625 -->

## 1.16.2

17 January 2024

This version is compatible with Kubernetes versions 1.25 to 1.28.

### Bugfixes

- Fixed a scenario where node container runtimes could restart if the Okteto daemon pod were to be recreated, potentially impacting active 'okteto up' sessions. <!-- 7625 -->

## 1.16.1

10 January 2024

This version is compatible with Kubernetes versions 1.25 to 1.28.

### Bugfixes

- The Okteto CLI used for Pipeline installation has been upgraded to version [2.23.3](https://github.com/okteto/okteto/releases/tag/2.23.3). It includes a fix for scenarios where image builds were failing because an image was not being found in the global registry.
- The Okteto Insights endpoint was not exposing build metrics when the Helm release name included the word "okteto"

## 1.16.0

20 December 2023

This version is compatible with Kubernetes versions 1.25 to 1.28.

### Features

- Add `okteto_usage_build_duration_seconds` build metrics to okteto insights. More info [here](admin/okteto-insights.mdx) <!-- 7445 -->
- A diagnostics tool is now provided to help troubleshoot installations. More info [here](self-hosted/manage/diagnostics.mdx)
- The Okteto CLI used for Pipeline installation has been upgraded to version [2.23.1](https://github.com/okteto/okteto/releases/tag/2.23.1)
- Move garbage collection of `okteto up` based on last synced file behind a feature flag. More info [here](self-hosted/helm-configuration.mdx#gc) <!-- 7424 -->
- Okteto now runs in ARM architecture. This is currently in beta.

### Improvements

- Okteto garbage collector cronjob now resolves buildkit and ingress hosts to their internal IPs <!-- 7432 -->
- Registry Credentials cronjob only update dockerconfig secret if the credentials change. <!-- 7474 -->
- Okteto Daemon now update kubelet docker config.json file in nodes reactively when the static docker config secret changes. Bumps okteto/daemon to 0.5.1
- Fix network policies configuration to limit buildkit access to the nginx controller <!-- 7505 -->
- Add Okteto Insights Token to the Admin UI <!-- 7473 -->
- Updated documentation structure to make content easier to navigate and find. Release notes can now be found at [https://www.okteto.com/docs/release-notes](release-notes.mdx), and chart values reference can be found at [https://www.okteto.com/docs/reference/helm-chart-values/](self-hosted/helm-configuration.mdx). All documentation changes are listed [here](https://github.com/okteto/docs/pulls?q=is%3Apr+label%3Adoc-restructure+).

## 1.15.1

1 December 2023

This version is compatible with Kubernetes versions 1.25 to 1.27.

### Bugfixes

- Fix okteto daemon restart when AWS ECR private registry credentials are defined

## 1.15.0

22 November 2023

This version is compatible with Kubernetes versions 1.25 to 1.27.

### Removal Notice

Kubernetes 1.24 is no longer supported

### Improvements

- Upgrade ingress-nginx to [1.9.4](https://github.com/kubernetes/ingress-nginx/releases/tag/controller-v1.9.4) (Helm chart version 4.8.3) <!-- 7386 -->
- Enabled [chroot mode](https://kubernetes.io/blog/2022/04/28/ingress-nginx-1-2-0/) by default in both ingress-nginx controllers managed by Okteto.
- `okteto up` sessions are now garbage collected if no files have been synced for an hour <!-- 7424 -->

### Bug Fixes

- Fallback to default branch for destroy installer jobs <!-- 7382 -->
- Smart builds work on repositories using `.gitmodules` containing submodules cloned via ssh key
- Fix wrong "Scale to Zero Period" value in the UI of Admin → Namespaces

### Features

- The Okteto CLI used for Pipeline installation has been upgraded to version [2.22.3](https://github.com/okteto/okteto/releases/tag/2.22.3)

## 1.14.3

1 December 2023

This version is compatible with Kubernetes versions 1.25 to 1.27.

### Bugfixes

- Fix okteto daemon restart when AWS ECR private registry credentials are defined

## 1.14.2

8 November 2023

This version is compatible with Kubernetes versions 1.24 to 1.27.

### Bugfixes

- Fix private registry credentials integration for registries with custom ports (other that the default 443)

## 1.14.1

27 October 2023

This version is compatible with Kubernetes versions 1.24 to 1.27.

### Improvements

- Okteto internal registry is now resolved in private credentials exchange

### Bugfixes

- Namespace list in the UI is now scrollable and displays all namespaces.
- Fix login with openid through the okteto CLI with custom "audience" and "resource"

## 1.14.0

25 October 2023

This version is compatible with Kubernetes versions 1.24 to 1.27.

### Deprecation Notice

- Helm charts catalog is no longer available in the Okteto UI. For alternative approach to deploy Helm charts see https://www.okteto.com/blog/making-your-helm-packaged-applications-ready-for-cloud-native-development-with-okteto/
- Defining Private Registry credentials in Helm has been deprecated. Private Registry Credentials are now natively supported by Okteto and configurable in the Okteto UI. Credentials defined in Helm will be automatically migrated. More info [here](self-hosted/manage/upgrade.mdx#upgrading-to-okteto-114x)
- Support for Kubernetes [1.24](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.24.md) has been deprecated and will be removed in the next release.

### Features

- Added a new `/metrics` endpoint to expose prometheus node metrics data. More info [here](admin/okteto-insights.mdx).
- Added native support for Private Registry Credentials, configurable directly in the Okteto UI. More info [here](admin/dashboard.mdx#registry-credentials).
- The Okteto CLI used for Pipeline installation has been upgraded to version [2.21.0](https://github.com/okteto/okteto/releases/tag/2.21.0) <!-- 7310 -->
- Add support for Kubernetes [1.27](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.27.md)

### Improvements

- Upgrade ingress-nginx to 1.8.2 (Helm chart version 4.7.2) <!-- 7295 -->

### Bugfixes

- Reduce file permission for okteto-ca-pemstore certificate file in jobs <!-- 7303 -->
- Reduce expiration threshold for trial licenses from 60 to 7 days <!-- 7314 -->

## 1.13.0

27 September 2023

This version is compatible with Kubernetes versions 1.24 to 1.26.

### Breaking Changes

Okteto requires you to use a valid license as part of the installation. If you were running a previous version of Okteto and you don't have a valid license, signup for our [Free Tier (5 seats, 1 year)](https://www.okteto.com/free-trial/) or [reach out to us](https://www.okteto.com/contact/).

### Improvements

- Updates to [Cloud Secret](self-hosted/helm-configuration.mdx#registry) now take immediate effect <!-- 7032 -->
- The Okteto CLI used for Pipeline installation has been upgraded to version [2.20.0](https://github.com/okteto/okteto/releases/tag/2.20.0)
- Pipeline installations now use dynamic kubernetes tokens to talk to the kubernetes api via the [ClientAuthentication API](https://kubernetes.io/docs/reference/config-api/client-authentication.v1/).

### Bugfixes

- Documentation now links the exact version version in the docs <!-- 7034 -->
- During installation/upgrade the current version of Okteto is no longer tied to Helm `.Chart.Version` and `.Chart.AppVersion` <!-- 7183 -->
- Improve platform and kubernetes version attributes resolution in Telemetry cronjob <!-- 7184 -->

## 1.12.1

14 September 2023

This version is compatible with Kubernetes versions 1.24 to 1.26.

### Bugfixes

- Update Kubernetes internal dependencies to fix a possible crash/panic when Okteto lists the cluster API Resources. This could happen when destroying the content of a namespace or during Preview Environment operations. <!-- 7162, 7166 -->
  - Includes the following commit from `kubernetes/client-go`: https://github.com/kubernetes/client-go/commit/5ebee1886e7bc6891833dd92c200f4f5258889c0.

## 1.12.0

31 August 2023

This version is compatible with Kubernetes versions 1.24 to 1.26.

### Breaking changes

- Kubeconfigs downloaded from the Okteto web UI now require Okteto CLI 2.15 or higher to use dynamic tokens for authenticating against Kubernetes. <!-- 6972 -->

### Features

- The Okteto CLI has been upgraded to version [2.19.2](https://github.com/okteto/okteto/releases/tag/2.19.2).
- The Admin view has been redesigned with a new vertical tab column. <!-- 6851 -->
- Added ["Registry Credentials" to the Admin view](admin/dashboard.mdx#registry-credentials) to display configured private registry information. This provides visibility into the private registries in use for your Okteto instance (username/password and AWS Access/Secret only for now) <!-- 6851 -->

### Improvements

- The Preview list in the Admin view now shows time units in the Garbage Collector settings description. <!-- 6917 -->
- When waking a Namespace from the Namespace, Preview, or Admin views, the UI now provides feedback for the request. <!-- 6965, 6949, 6979 -->
- When a GitHub user does not belong to the allowed GitHub organization and attempts to log in, a specific error is now shown. <!-- 6988 -->
- When using a GitHub App for authentication that is not yet installed in the GitHub organization and an allowed GitHub organization filter is set, a specific error is now shown. <!-- 6988 -->
- Resources for Nodes in the Admin view are now correctly aligned. <!-- 7013 -->
- Priority Classes can now be specified via `priorityClassName` sub-property for the following components: [`api`](self-hosted/helm-configuration.mdx#api), [`buildkit`](self-hosted/helm-configuration.mdx#buildkit), [`defaultBackend`](self-hosted/helm-configuration.mdx#defaultbackend), [`frontend`](self-hosted/helm-configuration.mdx#frontend), [`registry`](self-hosted/helm-configuration.mdx#registry) and [`webhook`](self-hosted/helm-configuration.mdx#webhook). <!-- 6911 -->